--- a/language/en-GB/en-GB.tpl_italiapa.sys.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.sys.ini
@@ -4,6 +4,24 @@
 ; Note : All ini files need to be saved as UTF-8
 
 ITALIAPA="ItaliaPA"
+TPL_ITALIAPA_CAROUSEL_AUTO_SLIDING_DESC="If enabled, the carousel is animated starting at page load."
+TPL_ITALIAPA_CAROUSEL_AUTO_SLIDING_LABEL="Auto sliding"
+TPL_ITALIAPA_CAROUSEL_LAYOUT_DESC=""
+TPL_ITALIAPA_CAROUSEL_LAYOUT_LABEL="Item layout"
+TPL_ITALIAPA_CAROUSEL_LAYOUT_CARD="Card"
+TPL_ITALIAPA_CAROUSEL_LAYOUT_CELL="Cell"
+TPL_ITALIAPA_CAROUSEL_COUNT_DESC="The number of images to display on each slide (the default is 1)."
+TPL_ITALIAPA_CAROUSEL_COUNT_LABEL="# of Images"
+TPL_ITALIAPA_CAROUSEL_LAZY_DESC=""
+TPL_ITALIAPA_CAROUSEL_LAZY_LABEL="Lazy"
+TPL_ITALIAPA_CAROUSEL_INTERVAL_DESC="Specifies the amount of time to delay (in milliseconds) between one slide to another in automatic cycling."
+TPL_ITALIAPA_CAROUSEL_INTERVAL_LABEL="Interval"
+TPL_ITALIAPA_CAROUSEL_SHOW_CONTROLS_DESC="Adds a left button and a right one to the carousel, which allow the user to go back and forth between the slides."
+TPL_ITALIAPA_CAROUSEL_SHOW_CONTROLS_LABEL="Show controls"
+TPL_ITALIAPA_CAROUSEL_SHOW_INDICATORS_DESC="Adds indicators for the carousel. These are the little dots at the bottom of each slide (which indicates how many slides there are in the carousel, and which slide the user are currently viewing)."
+TPL_ITALIAPA_CAROUSEL_SHOW_INDICATORS_LABEL="Show indicators"
+TPL_ITALIAPA_CAROUSEL_SPEED_DESC="Specifies the time (in milliseconds) a transition effect takes to complete."
+TPL_ITALIAPA_CAROUSEL_SPEED_LABEL="Speed"
 TPL_ITALIAPA_CATEGORY_VIEW_ANAC_DESC="Displays a list of articles in a category."
 TPL_ITALIAPA_CATEGORY_VIEW_ANAC_OPTION="List"
 TPL_ITALIAPA_CATEGORY_VIEW_ANAC_TITLE="Category List (layout: ANAC)"
