--- a/language/it-IT/it-IT.tpl_italiapa.sys.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.sys.ini
@@ -4,6 +4,24 @@
 ; Note : All ini files need to be saved as UTF-8
 
 ITALIAPA="ItaliaPA"
+TPL_ITALIAPA_CAROUSEL_AUTO_SLIDING_DESC="Se abilitato, il carousel sarà animato al caricamento della pagina."
+TPL_ITALIAPA_CAROUSEL_AUTO_SLIDING_LABEL="Scorrimento automatico"
+TPL_ITALIAPA_CAROUSEL_LAYOUT_DESC=""
+TPL_ITALIAPA_CAROUSEL_LAYOUT_LABEL="Layout diapositiva"
+TPL_ITALIAPA_CAROUSEL_LAYOUT_CARD="Card"
+TPL_ITALIAPA_CAROUSEL_LAYOUT_CELL="Cell"
+TPL_ITALIAPA_CAROUSEL_COUNT_DESC="Il numero di immagini da visualizzare in ogni diapositiva (il default è 1)."
+TPL_ITALIAPA_CAROUSEL_COUNT_LABEL="# di immagini"
+TPL_ITALIAPA_CAROUSEL_LAZY_DESC=""
+TPL_ITALIAPA_CAROUSEL_LAZY_LABEL="Lazy"
+TPL_ITALIAPA_CAROUSEL_INTERVAL_DESC="Specifica il ritardo (in millisecondi) tra due diapositive."
+TPL_ITALIAPA_CAROUSEL_INTERVAL_LABEL="Intervallo"
+TPL_ITALIAPA_CAROUSEL_SHOW_CONTROLS_DESC="Aggiunge un pulsante a sinistra e uno a destra al carosello, che consentono all'utente di andare avanti e indietro tra le diapositive."
+TPL_ITALIAPA_CAROUSEL_SHOW_CONTROLS_LABEL="Mostra controlli"
+TPL_ITALIAPA_CAROUSEL_SHOW_INDICATORS_DESC="Aggiunge indicatori per il carousel. Questi sono i puntini nella parte inferiore di ogni diapositiva (che indica il numero di diapositive presenti nel carousel e che l'utente sta visualizzando attualmente."
+TPL_ITALIAPA_CAROUSEL_SHOW_INDICATORS_LABEL="Mostra indicatori"
+TPL_ITALIAPA_CAROUSEL_SPEED_DESC="Specifica il tempo (in millisecondi) necessario per completare un effetto di transizione da una slide ad un'altra."
+TPL_ITALIAPA_CAROUSEL_SPEED_LABEL="Velocità"
 TPL_ITALIAPA_CATEGORY_VIEW_ANAC_DESC="Visualizza la lista degli articoli appartenenti ad una categoria."
 TPL_ITALIAPA_CATEGORY_VIEW_ANAC_OPTION="Lista"
 TPL_ITALIAPA_CATEGORY_VIEW_ANAC_TITLE="Lista di singola categoria (layout: ANAC)"
