--- a/administrator/language/en-GB/en-GB.plg_content_ipavote.sys.ini
+++ b/administrator/language/en-GB/en-GB.plg_content_ipavote.sys.ini
@@ -11,4 +11,4 @@ PLG_CONTENT_IPAVOTE_DEBUG_PHPCONSOLE_DESC="If enabled, it displays log messages 
 PLG_CONTENT_IPAVOTE_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 PLG_CONTENT_IPAVOTE_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 PLG_CONTENT_IPAVOTE_DEBUG_SYSTEM_LABEL="Debug"
-PLG_CONTENT_IPAVOTE_XML_DESCRIPTION="Add Voting functionality to Articles."
+PLG_CONTENT_IPAVOTE_XML_DESCRIPTION="Add Voting functionality to Articles.<br/>The plugin requires the Content - Vote plugin to be enabled to work properly.<br/>The plugin Content - Vote for ItaliaPA must be before the plugin Content - Vote."
