--- a/administrator/language/en-GB/en-GB.plg_content_ipavote.ini
+++ b/administrator/language/en-GB/en-GB.plg_content_ipavote.ini
@@ -17,4 +17,4 @@ PLG_CONTENT_IPAVOTE_STYLE_LABEL="Vote Style"
 PLG_CONTENT_IPAVOTE_TOP="Top"
 PLG_CONTENT_IPAVOTE_USER_RATING="User Rating:&#160;%1$s&#160;/&#160;%2$s"
 PLG_CONTENT_IPAVOTE_IPAVOTE="Vote %s"
-PLG_CONTENT_IPAVOTE_XML_DESCRIPTION="Add Voting functionality to Articles."
+PLG_CONTENT_IPAVOTE_XML_DESCRIPTION="Add Voting functionality to Articles.<br/>The plugin requires the Content - Vote plugin to be enabled to work properly.<br/>The plugin Content - Vote for ItaliaPA must be before the plugin Content - Vote."
