mod_carousel responsive

--- a/administrator/language/en-GB/en-GB.plg_system_italiapa.ini
+++ b/administrator/language/en-GB/en-GB.plg_system_italiapa.ini
@@ -15,6 +15,7 @@ PLG_SYSTEM_ITALIAPA_CAROUSEL_LAZY_DESC=""
 PLG_SYSTEM_ITALIAPA_CAROUSEL_LAZY_LABEL="Lazy"
 PLG_SYSTEM_ITALIAPA_CAROUSEL_INTERVAL_DESC="Specifies the amount of time to delay (in milliseconds) between one slide to another in automatic cycling."
 PLG_SYSTEM_ITALIAPA_CAROUSEL_INTERVAL_LABEL="Interval"
+PLG_SYSTEM_ITALIAPA_CAROUSEL_RESPONSIVE="Responsive"
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_CONTROLS_DESC="Adds a left button and a right one to the carousel, which allow the user to go back and forth between the slides."
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_CONTROLS_LABEL="Show controls"
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_INDICATORS_DESC="Adds indicators for the carousel. These are the little dots at the bottom of each slide (which indicates how many slides there are in the carousel, and which slide the user are currently viewing)."
