--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -19,6 +19,8 @@ TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC="If enabled, it displays log messages in Goog
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
+TPL_ITALIAPA_FIELD_COPYRIGHT_DESC=""
+TPL_ITALIAPA_FIELD_COPYRIGHT_LABEL="Copyright"
 TPL_ITALIAPA_FIELD_FORWARD_DESC="Allow the user to automatically scroll to a specific part of the page."
 TPL_ITALIAPA_FIELD_FORWARD_LABEL="Forward"
 TPL_ITALIAPA_FIELD_HAMBURGERMENU_POS_DESC="The position of the Hamburger menu."
