--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -19,6 +19,8 @@ TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC="Se abilitato, visualizza i messaggi di debug
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="Console PHP"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
+TPL_ITALIAPA_FIELD_COPYRIGHT_DESC=""
+TPL_ITALIAPA_FIELD_COPYRIGHT_LABEL="Copyright"
 TPL_ITALIAPA_FIELD_FORWARD_DESC="Consente all'utente di far scorrere automaticamente ad una parte specifica della pagina."
 TPL_ITALIAPA_FIELD_FORWARD_LABEL="Forward"
 TPL_ITALIAPA_FIELD_HAMBURGERMENU_POS_DESC="Posizione del menu Hamburger"
