--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -20,9 +20,9 @@ TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
 TPL_ITALIAPA_FIELD_COPYRIGHT_DESC=""
-TPL_ITALIAPA_FIELD_COPYRIGHT_LABEL="Copyright"
+TPL_ITALIAPA_FIELD_COPYRIGHT_LABEL="Show Copyright"
 TPL_ITALIAPA_FIELD_FORWARD_DESC="Allow the user to automatically scroll to a specific part of the page."
-TPL_ITALIAPA_FIELD_FORWARD_LABEL="Forward"
+TPL_ITALIAPA_FIELD_FORWARD_LABEL="Show Forward"
 TPL_ITALIAPA_FIELD_HAMBURGERMENU_POS_DESC="The position of the Hamburger menu."
 TPL_ITALIAPA_FIELD_HAMBURGERMENU_POS_LABEL="Hamburger menu Position"
 TPL_ITALIAPA_FIELD_HEADROOM_DESC="Hide your header until you need it."
