login form with onAuthenticationAddLoginTab

--- a/language/en-GB/en-GB.tpl_italiapa.sys.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.sys.ini
@@ -49,6 +49,12 @@ TPL_ITALIAPA_FEATURED_VIEW_GRID_TITLE="Featured Articles (layout: Grid)"
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_DESC="Displays article introductions in a single or multi-column layout for featured articles from all categories."
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_OPTION="Hero News"
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_TITLE="Featured Articles (layout: Hero News)"
+TPL_ITALIAPA_LOGIN_VIEW_NOCREDENTIALS_DESC="Displays a login form."
+TPL_ITALIAPA_LOGIN_VIEW_NOCREDENTIALS_OPTION="Login Form"
+TPL_ITALIAPA_LOGIN_VIEW_NOCREDENTIALS_TITLE="Login Form without Credentials"
+TPL_ITALIAPA_LOGIN_VIEW_SPID_DESC="Displays a login form."
+TPL_ITALIAPA_LOGIN_VIEW_SPID_OPTION="Login Form"
+TPL_ITALIAPA_LOGIN_VIEW_SPID_TITLE="Login Form with SPiD"
 TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_LINKLIST_DESC = "Display a Site map in HTML format"
 TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_LINKLIST_TITLE = "Sitemap - HTML Format (layout: Linklist)"
 TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_TREEVIEW_DESC = "Display a Site map in HTML format"
