--- a/language/it-IT/it-IT.tpl_italiapa.sys.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.sys.ini
@@ -49,6 +49,12 @@ TPL_ITALIAPA_FEATURED_VIEW_GRID_TITLE="Articoli in evidenza di tutte le categori
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_DESC="Visualizza le introduzioni degli articoli in evidenza di tutte le categorie con un layout a singola o multi-colonna. "
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_OPTION="Hero news"
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_TITLE="Articoli in evidenza di tutte le categorie (layout: Hero news)"
+TPL_ITALIAPA_LOGIN_VIEW_NOCREDENTIALS_OPTION="Modulo login"
+TPL_ITALIAPA_LOGIN_VIEW_NOCREDENTIALS_TITLE="Login senza Credenziali"
+TPL_ITALIAPA_LOGIN_VIEW_NOCREDENTIALS_DESC="Visualizza un modulo per accedere all'area riservata del sito"
+TPL_ITALIAPA_LOGIN_VIEW_SPID_OPTION="Modulo login"
+TPL_ITALIAPA_LOGIN_VIEW_SPID_TITLE="Login SPiD"
+TPL_ITALIAPA_LOGIN_VIEW_SPID_DESC="Visualizza un modulo per accedere all'area riservata del sito"
 TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_LINKLIST_DESC = "Visualizza la mappa del sito in formato HTML"
 TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_LINKLIST_TITLE = "Mappa del sito - Formato HTML (layout: Linklist)"
 TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_TREEVIEW_DESC = "Visualizza la mappa del sito in formato HTML"
