feat: share button

--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -8,6 +8,15 @@ JGLOBAL_FIELDSET_ADVANCED="Advanced"
 JGLOBAL_FIELDSET_BASIC="Options"
 JGLOBAL_NUM_COLUMNS_DESC="The number of columns in which to show Intro Articles. Normally 1, 2, or 3."
 JGLOBAL_NUM_COLUMNS_LABEL="# Columns"
+JGLOBAL_SHARE="Share"
+JGLOBAL_SHARE_FACEBOOK="Facebook"
+JGLOBAL_SHARE_FACEBOOK_TOOLTIP="Share on Facebook"
+JGLOBAL_SHARE_TELEGRAM="Telegram"
+JGLOBAL_SHARE_TELEGRAM_TOOLTIP="Share with Telegram"
+JGLOBAL_SHARE_TWITTER="Twitter"
+JGLOBAL_SHARE_TWITTER_TOOLTIP="Share on Twitter"
+JGLOBAL_SHARE_WHATSAPP="Whatsapp"
+JGLOBAL_SHARE_WHATSAPP_TOOLTIP="Share with Whatsapp"
 TPL_ITALIAPA_BACKTOTOP="Back to Top"
 TPL_ITALIAPA_BUTTONS_REPORT="Report"
 TPL_ITALIAPA_BUTTONS_CSV="CSV"
