--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -8,6 +8,15 @@ JGLOBAL_FIELDSET_ADVANCED="Avanzate"
 JGLOBAL_FIELDSET_BASIC="Opzioni"
 JGLOBAL_NUM_COLUMNS_DESC="Numero di colonne nelle quali mostrare gli articoli introduttivi. Di solito 1, 2, o 3."
 JGLOBAL_NUM_COLUMNS_LABEL="n. colonne"
+JGLOBAL_SHARE="Condividi"
+JGLOBAL_SHARE_FACEBOOK="Facebook"
+JGLOBAL_SHARE_FACEBOOK_TOOLTIP="Condividi su Facebook"
+JGLOBAL_SHARE_TELEGRAM="Telegram"
+JGLOBAL_SHARE_TELEGRAM_TOOLTIP="Condividi con Telegram"
+JGLOBAL_SHARE_TWITTER="Twitter"
+JGLOBAL_SHARE_TWITTER_TOOLTIP="Condividi su Twitter"
+JGLOBAL_SHARE_WHATSAPP="Whatsapp"
+JGLOBAL_SHARE_WHATSAPP_TOOLTIP="Condividi con Whatsapp"
 TPL_ITALIAPA_BACKTOTOP="Torna su"
 TPL_ITALIAPA_BUTTONS_REPORT="Report"
 TPL_ITALIAPA_BUTTONS_CSV="CSV"
