com_content category focus show_urls

--- a/administrator/language/en-GB/en-GB.plg_system_italiapa.ini
+++ b/administrator/language/en-GB/en-GB.plg_system_italiapa.ini
@@ -22,3 +22,5 @@ PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_INDICATORS_DESC="Adds indicators for the carou
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_INDICATORS_LABEL="Show indicators"
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SPEED_DESC="Specifies the time (in milliseconds) a transition effect takes to complete."
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SPEED_LABEL="Speed"
+PLG_SYSTEM_ITALIAPA_SHOW_URLS_DESC="Show the links for each article."
+PLG_SYSTEM_ITALIAPA_SHOW_URLS_LABEL="Show Links"
