--- a/administrator/language/it-IT/it-IT.plg_system_italiapa.ini
+++ b/administrator/language/it-IT/it-IT.plg_system_italiapa.ini
@@ -21,3 +21,5 @@ PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_INDICATORS_DESC="Aggiunge indicatori per il ca
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_INDICATORS_LABEL="Mostra indicatori"
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SPEED_DESC="Specifica il tempo (in millisecondi) necessario per completare un effetto di transizione da una slide ad un'altra."
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SPEED_LABEL="Velocità"
+PLG_SYSTEM_ITALIAPA_SHOW_URLS_DESC="Mostra i link per ciascun articolo"
+PLG_SYSTEM_ITALIAPA_SHOW_URLS_LABEL="Mostra Link"
