feat: Categoria blog (layout: Servizi)

--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -1,4 +1,4 @@
-; Template ItaliaPA
+; Joomla.Site.Template.ItaliaPA __DEPLOY_VERSION__
 ; Copyright (C) 2017 - 2022 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
@@ -13,6 +13,7 @@ TPL_ITALIAPA_BUTTONS_REPORT="Report"
 TPL_ITALIAPA_BUTTONS_CSV="CSV"
 TPL_ITALIAPA_BUTTONS_CLOSE="Close"
 TPL_ITALIAPA_BUTTONS_SAVE="Save &amp; Close"
+TPL_ITALIAPA_CATEGORY_VIEW_SERVICES_EXPLORE="Explore all services"
 TPL_ITALIAPA_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
 TPL_ITALIAPA_DEBUG_FILENAME_LABEL="Filename"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
@@ -57,6 +58,18 @@ TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Organization type"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organization"
 TPL_ITALIAPA_SKIP_TO_MAIN_SECTION="Skip to Main Section"
 TPL_ITALIAPA_SKIP_TO_NEXT_SECTION="Skip to the next section"
+TPL_ITALIAPA_SEARCH_SORT_FRONT="Featured Articles Order"
+TPL_ITALIAPA_SEARCH_SORT_RDATE="Most Recent First"
+TPL_ITALIAPA_SEARCH_SORT_DATE="Oldest First"
+TPL_ITALIAPA_SEARCH_SORT_ALPHA="Title Alphabetical"
+TPL_ITALIAPA_SEARCH_SORT_RALPHA="Title Reverse Alphabetical"
+TPL_ITALIAPA_SEARCH_SORT_AUTHOR="Author Alphabetical"
+TPL_ITALIAPA_SEARCH_SORT_RAUTHOR="Author Reverse Alphabetical"
+TPL_ITALIAPA_SEARCH_SORT_HITS="Most Hits"
+TPL_ITALIAPA_SEARCH_SORT_RHITS="Least Hits"
+TPL_ITALIAPA_SEARCH_SORT_RANDOM="Random Order"
+TPL_ITALIAPA_SEARCH_SORT_ORDER="Article Order"
+TPL_ITALIAPA_SEARCH_SORT_RORDER="Article Reverse Order"
 TPL_ITALIAPA_SOURCE="Source"
 TPL_ITALIAPA_THEME_CITY="City"
 TPL_ITALIAPA_THEME_DEFAULT="Default"
@@ -66,5 +79,4 @@ TPL_ITALIAPA_THEME_NONE="None"
 TPL_ITALIAPA_THEME_SCHOOL="School"
 TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="School unofficial"
 TPL_ITALIAPA_UNTRUST_THIS_BROWSER="Untrust this browser"
-TPL_ITALIAPA_XML_DESCRIPTION="<h1>Template ItaliaPA for Joomla! 3.9</h1><p>Implementazione delle<a href=""http://www.agid.gov.it/tags/linee-guida-design-pa"" target=""_blank"">Linee guida di design per i servizi web della PA</a> basato su<a href=""https://italia.github.io/design-web-toolkit/"" target=""_blank"">it Web Toolkit</a>.</p><p>Created by <a href=""http://www.eshiol.it"" target=""_blank"">Helios Ciancio <img src=""https://www.eshiol.it/files/italiapa/eshiol.png"" alt=""eshiol.it""/></a></p>"
-
+TPL_ITALIAPA_XML_DESCRIPTION="<h1>Template ItaliaPA for Joomla! 3.10</h1><p>Implementazione delle<a href=""http://www.agid.gov.it/tags/linee-guida-design-pa"" target=""_blank"">Linee guida di design per i servizi web della PA</a> basato su<a href=""https://italia.github.io/design-web-toolkit/"" target=""_blank"">it Web Toolkit</a>.</p><p>Created by <a href=""http://www.eshiol.it"" target=""_blank"">Helios Ciancio <img src=""https://www.eshiol.it/files/italiapa/eshiol.png"" alt=""eshiol.it""/></a></p>"
