--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -1,4 +1,4 @@
-; Template ItaliaPA
+; Joomla.Site.Template.ItaliaPA __DEPLOY_VERSION__
 ; Copyright (C) 2017 - 2022 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
@@ -13,6 +13,7 @@ TPL_ITALIAPA_BUTTONS_REPORT="Report"
 TPL_ITALIAPA_BUTTONS_CSV="CSV"
 TPL_ITALIAPA_BUTTONS_CLOSE="Chiudi"
 TPL_ITALIAPA_BUTTONS_SAVE="Salva &amp; Chiudi"
+TPL_ITALIAPA_CATEGORY_VIEW_SERVICES_EXPLORE="Esplora tutti i servizi"
 TPL_ITALIAPA_DEBUG_FILENAME_DESC="Il nome del file in cui sono salvati i messaggi di log attuali."
 TPL_ITALIAPA_DEBUG_FILENAME_LABEL="Nome del file"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
@@ -57,7 +58,20 @@ TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Tipo di organizzazione"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organizzazione"
 TPL_ITALIAPA_SKIP_TO_MAIN_SECTION="Vai alla sezione principale"
 TPL_ITALIAPA_SKIP_TO_NEXT_SECTION="Vai alla sezione successiva"
+TPL_ITALIAPA_SEARCH_SORT_FRONT="%s %s trovati in ordine articoli in evidenza."
+TPL_ITALIAPA_SEARCH_SORT_RDATE="%s %s trovati in ordine di data (prima articoli più recenti)."
+TPL_ITALIAPA_SEARCH_SORT_DATE="%s %s trovati in ordine di data (prima articoli più vecchi)."
+TPL_ITALIAPA_SEARCH_SORT_ALPHA="%s %s trovati in ordine alfabetico."
+TPL_ITALIAPA_SEARCH_SORT_RALPHA="%s %s trovati in ordine alfabetico inverso."
+TPL_ITALIAPA_SEARCH_SORT_AUTHOR="%s %s trovati in ordine alfabetico per autore."
+TPL_ITALIAPA_SEARCH_SORT_RAUTHOR="%s %s trovati in ordine alfabetico inverso per autore."
+TPL_ITALIAPA_SEARCH_SORT_HITS="%s %s trovati in ordine dai più visitati."
+TPL_ITALIAPA_SEARCH_SORT_RHITS="%s %s trovati in ordine dai meno visitati."
+TPL_ITALIAPA_SEARCH_SORT_RANDOM="%s %s trovati in ordine casuale."
+TPL_ITALIAPA_SEARCH_SORT_ORDER="%s %s trovati in ordine articoli."
+TPL_ITALIAPA_SEARCH_SORT_RORDER="%s %s trovati in ordine articoli inverso."
 TPL_ITALIAPA_SOURCE="Fonte"
+TPL_ITALIAPA_THEME_CITY="Comune"
 TPL_ITALIAPA_THEME_DEFAULT="Default"
 TPL_ITALIAPA_THEME_ITALIA="Italia"
 TPL_ITALIAPA_THEME_ITALIAAA="Italia accessibile"
@@ -65,4 +79,4 @@ TPL_ITALIAPA_THEME_NONE="Nessuno"
 TPL_ITALIAPA_THEME_SCHOOL="Scuola"
 TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="Scuola unofficial"
 TPL_ITALIAPA_UNTRUST_THIS_BROWSER="Rimuovi fiducia"
-TPL_ITALIAPA_XML_DESCRIPTION="<h1>Template ItaliaPA for Joomla! 3.9</h1><p>Implementazione delle<a href=""http://www.agid.gov.it/tags/linee-guida-design-pa"" target=""_blank"">Linee guida di design per i servizi web della PA</a> basato su<a href=""https://italia.github.io/design-web-toolkit/"" target=""_blank"">it Web Toolkit</a>.</p><p>Created by <a href=""http://www.eshiol.it"" target=""_blank"">Helios Ciancio <img src=""https://www.eshiol.it/files/italiapa/eshiol.png"" alt=""eshiol.it""/></a></p>"
+TPL_ITALIAPA_XML_DESCRIPTION="<h1>Template ItaliaPA for Joomla! 3.10</h1><p>Implementazione delle<a href=""http://www.agid.gov.it/tags/linee-guida-design-pa"" target=""_blank"">Linee guida di design per i servizi web della PA</a> basato su<a href=""https://italia.github.io/design-web-toolkit/"" target=""_blank"">it Web Toolkit</a>.</p><p>Created by <a href=""http://www.eshiol.it"" target=""_blank"">Helios Ciancio <img src=""https://www.eshiol.it/files/italiapa/eshiol.png"" alt=""eshiol.it""/></a></p>"
