--- a/language/it-IT/it-IT.tpl_italiapa.sys.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.sys.ini
@@ -1,4 +1,4 @@
-; Template ItaliaPA
+; Joomla.Site.Template.ItaliaPA __DEPLOY_VERSION__
 ; Copyright (C) 2017 - 2022 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
@@ -37,6 +37,9 @@ TPL_ITALIAPA_CATEGORY_VIEW_MASONRY_TITLE="Categoria blog (layout: Masonry)"
 TPL_ITALIAPA_CATEGORY_VIEW_NEWS_DESC="Visualizza le introduzioni degli articoli con un layout a singola o multi-colonna."
 TPL_ITALIAPA_CATEGORY_VIEW_NEWS_OPTION="Masonry"
 TPL_ITALIAPA_CATEGORY_VIEW_NEWS_TITLE="Categoria blog (layout: News)"
+TPL_ITALIAPA_CATEGORY_VIEW_SERVICES_DESC="Visualizza le introduzioni degli articoli con un layout a singola o multi-colonna."
+TPL_ITALIAPA_CATEGORY_VIEW_SERVICES_OPTION="Servizi"
+TPL_ITALIAPA_CATEGORY_VIEW_SERVICES_TITLE="Categoria blog (layout: Servizi)"
 TPL_ITALIAPA_CONTACT_CATEGORIES_VIEW_ORGANIGRAMMA_DESC="Mostra la lista di tutte le categorie di contatti come Organigramma."
 TPL_ITALIAPA_CONTACT_CATEGORIES_VIEW_ORGANIGRAMMA_OPTION="Predefinito"
 TPL_ITALIAPA_CONTACT_CATEGORIES_VIEW_ORGANIGRAMMA_TITLE="Lista di tutte le categorie (layout: Organigramma)"
@@ -49,14 +52,8 @@ TPL_ITALIAPA_FEATURED_VIEW_GRID_TITLE="Articoli in evidenza di tutte le categori
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_DESC="Visualizza le introduzioni degli articoli in evidenza di tutte le categorie con un layout a singola o multi-colonna. "
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_OPTION="Hero news"
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_TITLE="Articoli in evidenza di tutte le categorie (layout: Hero news)"
-TPL_ITALIAPA_LOGIN_VIEW_NOCREDENTIALS_OPTION="Modulo login"
-TPL_ITALIAPA_LOGIN_VIEW_NOCREDENTIALS_TITLE="Login senza Credenziali"
-TPL_ITALIAPA_LOGIN_VIEW_NOCREDENTIALS_DESC="Visualizza un modulo per accedere all'area riservata del sito"
-TPL_ITALIAPA_LOGIN_VIEW_SPID_OPTION="Modulo login"
-TPL_ITALIAPA_LOGIN_VIEW_SPID_TITLE="Login SPiD"
-TPL_ITALIAPA_LOGIN_VIEW_SPID_DESC="Visualizza un modulo per accedere all'area riservata del sito"
 TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_LINKLIST_DESC = "Visualizza la mappa del sito in formato HTML"
 TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_LINKLIST_TITLE = "Mappa del sito - Formato HTML (layout: Linklist)"
 TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_TREEVIEW_DESC = "Visualizza la mappa del sito in formato HTML"
 TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_TREEVIEW_TITLE = "Mappa del sito - Formato HTML (layout: Treeview)"
-TPL_ITALIAPA_XML_DESCRIPTION="<h1>Template ItaliaPA for Joomla! 3.9</h1><p>Implementazione delle<a href=""http://www.agid.gov.it/tags/linee-guida-design-pa"" target=""_blank"">Linee guida di design per i servizi web della PA</a> basato su<a href=""https://italia.github.io/design-web-toolkit/"" target=""_blank"">it Web Toolkit</a>.</p><p>Created by <a href=""http://www.eshiol.it"" target=""_blank"">Helios Ciancio <img src=""https://www.eshiol.it/files/italiapa/eshiol.png"" alt=""eshiol.it""/></a></p>"
+TPL_ITALIAPA_XML_DESCRIPTION="<h1>Template ItaliaPA for Joomla! 3.10</h1><p>Implementazione delle<a href=""http://www.agid.gov.it/tags/linee-guida-design-pa"" target=""_blank"">Linee guida di design per i servizi web della PA</a> basato su<a href=""https://italia.github.io/design-web-toolkit/"" target=""_blank"">it Web Toolkit</a>.</p><p>Created by <a href=""http://www.eshiol.it"" target=""_blank"">Helios Ciancio <img src=""https://www.eshiol.it/files/italiapa/eshiol.png"" alt=""eshiol.it""/></a></p>"
