--- a/administrator/language/en-GB/en-GB.plg_system_italiapa.ini
+++ b/administrator/language/en-GB/en-GB.plg_system_italiapa.ini
@@ -1,5 +1,5 @@
-; Joomla.Plugins.System.ItaliaPA
-; Copyright (C) 2017 - 2022 Helios Ciancio. All rights reserved.
+; Joomla.Plugins.System.ItaliaPA __DEPLOY_VERSION__
+; Copyright (C) 2017 - 2023 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
@@ -22,5 +22,9 @@ PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_INDICATORS_DESC="Adds indicators for the carou
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_INDICATORS_LABEL="Show indicators"
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SPEED_DESC="Specifies the time (in milliseconds) a transition effect takes to complete."
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SPEED_LABEL="Speed"
+PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_DESC="Show authentication form."
+PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_FIRST="First"
+PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_LABEL="Credentials"
+PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_LAST="Last"
 PLG_SYSTEM_ITALIAPA_SHOW_URLS_DESC="Show the links for each article."
 PLG_SYSTEM_ITALIAPA_SHOW_URLS_LABEL="Show Links"
