--- a/administrator/language/it-IT/it-IT.plg_system_italiapa.ini
+++ b/administrator/language/it-IT/it-IT.plg_system_italiapa.ini
@@ -1,5 +1,5 @@
-; Joomla.Plugins.System.ItaliaPA
-; Copyright (C) 2017 - 2022 Helios Ciancio. All rights reserved.
+; Joomla.Plugins.System.ItaliaPA __DEPLOY_VERSION__
+; Copyright (C) 2017 - 2023 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
@@ -21,5 +21,9 @@ PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_INDICATORS_DESC="Aggiunge indicatori per il ca
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SHOW_INDICATORS_LABEL="Mostra indicatori"
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SPEED_DESC="Specifica il tempo (in millisecondi) necessario per completare un effetto di transizione da una slide ad un'altra."
 PLG_SYSTEM_ITALIAPA_CAROUSEL_SPEED_LABEL="Velocità"
+PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_DESC="Mostra form di autenticazione basata su credenziali."
+PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_FIRST="Prima"
+PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_LABEL="Credenziali"
+PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_LAST="Ultima"
 PLG_SYSTEM_ITALIAPA_SHOW_URLS_DESC="Mostra i link per ciascun articolo"
 PLG_SYSTEM_ITALIAPA_SHOW_URLS_LABEL="Mostra Link"
