feat: opzione globale tab credenziali

--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -57,6 +57,10 @@ TPL_ITALIAPA_LINK_SHORT_LABEL="Short title"
 TPL_ITALIAPA_LINK_TITLE_DESC=""
 TPL_ITALIAPA_LINK_TITLE_LABEL="Title"
 TPL_ITALIAPA_LOGIN_CREDENTIALS="Credentials"
+TPL_ITALIAPA_LOGIN_JOOMLA_DESC="Show authentication form."
+TPL_ITALIAPA_LOGIN_JOOMLA_FIRST="First"
+TPL_ITALIAPA_LOGIN_JOOMLA_LABEL="Credentials"
+TPL_ITALIAPA_LOGIN_JOOMLA_LAST="Last"
 TPL_ITALIAPA_MICRODATA_LABEL="Microdata"
 TPL_ITALIAPA_NEWSANDEVENTS="News and events"
 TPL_ITALIAPA_OPEN_MENU="Open the menu"
