--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -57,6 +57,10 @@ TPL_ITALIAPA_LINK_SHORT_LABEL="Titolo breve"
 TPL_ITALIAPA_LINK_TITLE_DESC=""
 TPL_ITALIAPA_LINK_TITLE_LABEL="Titolo"
 TPL_ITALIAPA_LOGIN_CREDENTIALS="Credenziali"
+TPL_ITALIAPA_LOGIN_JOOMLA_DESC="Mostra form di autenticazione basata su credenziali."
+TPL_ITALIAPA_LOGIN_JOOMLA_FIRST="Prima"
+TPL_ITALIAPA_LOGIN_JOOMLA_LABEL="Credenziali"
+TPL_ITALIAPA_LOGIN_JOOMLA_LAST="Ultima"
 TPL_ITALIAPA_MICRODATA_LABEL="Microdata"
 TPL_ITALIAPA_NEWSANDEVENTS="Notizie ed eventi"
 TPL_ITALIAPA_OPEN_MENU="Accedi al menu"
